doc (doc/swagger) : create swaggo documentation for chart and transfer
